<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CarFragment">


    <TextView
        android:id="@+id/tvCheck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/common_padding_medium"
        android:text="@string/product_check_list"
        android:textAppearance="?attr/textAppearanceHeadline6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_padding_medium"
        android:layout_marginEnd="@dimen/common_padding_medium"
        tools:listitem="@layout/item_car"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCheck"
        />


    <View
        android:id="@+id/divider"
        android:layout_width="@dimen/card_divider_width"
        android:layout_height="@dimen/card_divider_height"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:background="@color/dvider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recyclerView" />

    <TextView
        android:id="@+id/tvSum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?attr/textAppearanceHeadline6"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        tools:text="Total: $10.00"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnback"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="24dp"
        android:text="@string/back"
        app:icon="@drawable/ic_baseline_arrow_back_ios_24"
        app:iconGravity="end"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnpay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/text_pay"
        app:icon="@drawable/ic_baseline_payment_24"
        app:iconGravity="end"
        app:layout_constraintBottom_toBottomOf="@+id/btnback"
        app:layout_constraintStart_toEndOf="@+id/btnback"
        app:layout_constraintTop_toTopOf="@+id/btnback" />

</androidx.constraintlayout.widget.ConstraintLayout>